# testGithub

./: db.sqlite3  mcp_calculator.py  mcp_server.py  pyproject.toml
conferenceApp/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
conferenceApp/migrations/: 0001_initial.py  0002_conference_description.py
firstproject/: settings.py  urls.py
sessionApp/: admin.py  models.py  sessionApp.code-workspace  urls.py  views.py
sessionApp/migrations/: 0001_initial.py
studentapp/: models.py
studentapp/migrations/: 0001_initial.py
templates/: base.html  login.html
templates/conferenceApp/: about.html  conference_confirm_delete.html  conference_detail.html  conference_form.html  conference_list.html  welcome.html
templates/sessionApp/: session_list.html
userApp/: admin.py  models.py
userApp/migrations/: 0001_initial.py
